# afta

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  feature_specs.md  tesina_analisis_futbol_ia.md
backend/: .dockerignore  clean_minio.py  fix_matches.sql  pyproject.toml  requirements-api.txt  requirements-worker.txt  requirements.txt
backend/docker/: Dockerfile.api  Dockerfile.gpu  Dockerfile.worker  init-extensions.sql
backend/models/: phase_classifier.joblib
backend/src/application/services/: match_context_service.py
backend/src/application/use_cases/: __init__.py  (+17 more)
backend/tests/: conftest.py  fakes.py  test_new_features.py
backend/tests/application/: test_match_analyzer.py  test_match_ingester.py  test_metrics_calculator.py  test_phase_classifier.py  test_report_generator.py  test_video_calibrator.py  test_video_processor.py
backend/tests/domain/: test_analysis_job.py  test_bounding_box.py  test_calibration_service.py  test_coordinates.py  test_event.py  test_homography_matrix.py  test_keypoint.py  test_match.py  test_tactical_metrics.py  test_trajectory.py
backend/tests/e2e/: conftest.py  test_01_health.py  test_02_ingestion.py  test_03_analytics.py  test_04_features.py  test_05_reports.py
backend/tests/infrastructure/: test_statsbomb_adapter.py
backend/tests/integration/: test_agentic_reasoning_flow.py  test_crewai_integration.py  test_di_container.py  test_ingestion_persistence.py  test_rag_indexing.py  test_tracking_persistence.py
backend/tests/unit/: test_phase2_components.py  test_phase5_components.py
(+240 files in other folders)
