[tool.poetry]
name = "afta-backend"
version = "0.1.0"
description = "Automated Football Tactical Analysis Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
celery = "^5.3.0"
redis = "^5.0.0"
statsbombpy = "^1.12.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
scipy = "^1.12.0"
ultralytics = "^8.1.0"
torch = "^2.2.0"
opencv-python-headless = "^4.9.0"
crewai = "^0.19.0"
langchain = "^0.1.0"
chromadb = "^0.4.0"
minio = "^7.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
